# loopilot

./: .env.example  .gitignore  HUONG_DAN_SU_DUNG.md  LICENSE  PROJECT_STATUS.md  README.md  _debug_transcript.py  copilot-operator.yml  package.json  pyproject.toml  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agent-data/: benchmark-sources.yml  runtime-contract.md  scorecard.yml
.github/agents/: auditor.agent.md  implementer.agent.md  (+2 more)
copilot_operator/: __init__.py  adaptive_strategy.py  adversarial.py  archive_retrieval.py  benchmark.py  benchmark_learner.py  bootstrap.py  brain.py  ci_integration.py  cli.py  config.py  context_budget.py  cross_repo_brain.py  dashboard.py  diff_scan.py  github_integration.py  goal_decomposer.py  hint_actuator.py  intelligence_telemetry.py  intention_guard.py  llm_brain.py  locale.py  logging_config.py  memory_promotion.py  meta_learner.py  mission_memory.py  narrative.py  narrative_engine.py  narrative_formats.py  nightly.py  operator.py  planner.py  policy.py  prompts.py  reasoning.py  repo_inspector.py  repo_map.py  repo_ops.py  roi.py  runtime_guard.py  (+10 more)
docs/: COPILOT_OPERATOR_BACKLOG.md  COPILOT_OPERATOR_CHECKLIST.md  COPILOT_OPERATOR_GOAL_TEMPLATES.md  COPILOT_OPERATOR_MASTER_PLAN.md  COPILOT_OPERATOR_QUICK_CHECKLIST.md  COPILOT_OPERATOR_RUNBOOK.md  LEVEL2_MASTER_PLAN.md
tests/: hooks.test.cjs
tests_python/: _run_all.py  test_auto_resume.py  test_checklist_features.py  test_config_wiring.py  test_context_optimization.py  test_diff_scan.py  test_error_recovery.py  test_features_af.py  test_hardening.py  test_hardening_v2.py  test_integration_loop_closure.py  test_intelligence_actuation.py  test_intelligence_engine.py  test_llm_brain.py  test_logging_vscode.py  test_memory_hardening.py  test_memory_model.py  test_memory_v2.py  test_narrative_memory.py  test_narrative_ui.py  test_narrative_ux.py  test_new_features.py  test_new_modules.py  test_operator.py  test_p3_p4.py  test_risk_gate.py  test_scheduler.py  test_stop_controller.py  test_stress_edge_cases.py  test_terminal_benchmark.py  test_validation_autofill.py
(+19 files in other folders)
